<resources>
    <string name="app_name">eSwapGO</string>
    <string name="network_error">The network seems to be disconnected, please check your network settings</string>
    <string name="find_new_version">Detected with a newer version</string>
    <string name="verification_of_mobile_phone">Phone verification</string>
    <string name="rent_battery">Rent battery</string>
    <string name="use_now">Immediately Use</string>
    <string name="scan_open_station">Open cabinet</string>
    <string name="scan_exchange_battery">Swap battery</string>
    <string name="not_enough_combo">Insufficient number of times.Please upgrade your package.</string>
    <string name="fetch_battery">Take the battery</string>
    <string name="retention_time">Remaining time</string>
    <string name="select_battery_num">Please select the battery quantity</string>
    <string name="notice_msg_to_rent">Rental battery will be able to enjoy "60 days unlimited free switch privileges" go and loan</string>
    <string name="notice_msg_font">60 days unlimited free switch privileges remains</string>
    <string name="e_60">eSwapGO send you a "60 days unlimited free renewal privilege"</string>
    <string name="one_battery_ke"> 1</string>
    <string name="two_battery_ke"> 2</string>
    <string name="no_battery_rent">No batteries rentable</string>
    <string name="battery_number">The battery number</string>
    <string name="peldge">Deposit</string>
    <string name="pay_scuess">Payment successful</string>
    <string name="one_battery">One battery</string>
    <string name="two_battery">Two batteries</string>
    <string name="ride_can_arrive">Estimated time</string>
    <string name="order">Order</string>
    <string name="appointmenting">Ordering</string>
    <string name="distance_starting">Distance</string>
    <string name="wether_cancle_order_battery">Are you sure you want to cancel the reservation?</string>
    <string name="cancle_order">Cancel reservation</string>
    <string name="not_have_buy_combo">You haven\'t bought the package yet</string>
    <string name="combo_is_exist">The package has already existed. Do not repeat the purchase</string>
    <string name="month_combo_list">Package month  list</string>
    <string name="times_combo_list">Package times list</string>
    <string name="combo_updata">Replace package</string>
    <string name="cancle_combo_degrade_sucess">Delete package success.</string>
    <string name="cancle_combo_degrade_fail">Delete package failed.</string>
    <string name="combo_cancle_degrade">Delete package</string>
    <string name="wether_combo_cancle_degrade">Delete the package?</string>
    <string name="auto_renew">Automatic renewal</string>
    <string name="expense_query_fail">Renewal service search failed</string>
    <string name="expense_closed_fail">Renewal service close failed</string>
    <string name="expense_open_fail">Automatic renewal package failed.</string>
    <string name="auto_renew_msg">The automatic renewal service will be opened automatically for you to renew your package before the expiration of your monthly card</string>
    <string name="not_limt">Unlimited/month</string>
    <string name="not_limit_times">Unlimited</string>
    <string name="effective_date">Effective date</string>
    <string name="validity">period of validity</string>
    <string name="now_combo">Current package</string>
    <string name="not_effect_combo">Be effective package</string>
    <string name="fail_order_toast">Order the battery failed, please try again.</string>
    <string name="not_have_combo">You don\'t have any packages, please purchase one in "my package"</string>
    <string name="no_can_use_battery">The number of available batteries is insufficient.Please try again later</string>
    <string name="not_have_use_batttery">You don\'t have any available batteries, please rent one first.</string>
    <string name="open_station_fail">Open the cabinet failed</string>
    <string name="cancle_order_sucess">Cancel the reservation successfully</string>
    <string name="cancle_order_fail">Failed to cancel the reservation，please try again later.</string>
    <string name="my_wallet">My wallet</string>
    <string name="may_car">My scooter</string>
    <string name="my_battery">My battery</string>
    <string name="my_combo">My package</string>
    <string name="about_us">About us</string>
    <string name="user_guide">User guide</string>
    <string name="deposit_pay">Deposit recharge</string>
    <string name="cash_pledge">Deposit (refundable)</string>
    <string name="wx">Wechat</string>
    <string name="zfb">Alipay</string>
    <string name="go_pay">Recharge</string>
    <string name="immotor_charge_mes">Immotor will not require you to enter a bank account and password in any form</string>
    <string name="rent_battery_msg">eSwapGO will not require you to enter your bank account and password in any way</string>
    <string name="refund">Deposit refund</string>
    <string name="cont_get_data">No data was obtained</string>
    <string name="refund_msg">Warm tip: before returning the deposit, make sure that the battery has been returned to the exchange cabinet</string>
    <string name="refund_dialog_msg">Refund the deposit will not be able to continue using the super battery, are you sure you want to refund?</string>
    <string name="refund_scuess">The deposit will be returned to your account within 1-5 working days. Please pay attention to the receipt of the deposit.</string>
    <string name="one_time_to_refund_month">Each battery is only allowed to retreat twice a month deposit</string>
    <string name="import_phone_number">Enter your phone number</string>
    <string name="import_auth_code">Import code</string>
    <string name="get_auth_code">Verification code</string>
    <string name="readed_and_agree">Agree</string>
    <string name="user_registration_protocol">User registration agreement</string>
    <string name="begin">Log in</string>
    <string name="auth_code">Code</string>
    <string name="log_out">Log out</string>
    <string name="authcode_outtime_code">Invalid verification code.</string>
    <string name="import_graphical_verification_code">Input verification code</string>
    <string name="auth_code_import_error">Verification code error, please re-enter.</string>
    <string name="send_authcode_fail">Failed to send the verification code, please try again later.</string>
    <string name="send_out_limt_hour">SMS verification code sent more than the number of restrictions.</string>
    <string name="send_out_limt_day">SMS verification code sent more than the number of restrictions.</string>
    <string name="wether_log_out">Are you sure to quit?</string>
    <string name="plase_login_agin">Your login has expired, please login again.</string>
    <string name="log_out_fail">Log out failed</string>
    <string name="personal_center">Profile</string>
    <string name="my_nickname">Nickname</string>
    <string name="sex">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="cell">Phone</string>
    <string name="man">Male</string>
    <string name="women">Female</string>
    <string name="not_setting">Nothing</string>
    <string name="save">Save</string>
    <string name="import_nickname">Please enter a nickname</string>
    <string name="take_photo">Take photo</string>
    <string name="select_from_depot">Choose from library</string>
    <string name="detail">Details</string>
    <string name="wallet_balance">Wallet balance</string>
    <string name="expense_detail">Consumer details</string>
    <string name="charge_detail">Recharge details</string>
    <string name="charge_chanese_symbol">Recharge ¥</string>
    <string name="get_chanese_symbol">Get ¥</string>
    <string name="charge_number">Recharge amount</string>
    <string name="select_pay_way">Please choose payment type</string>
    <string name="pay_now">Pay now</string>
    <string name="charge_msg">Agree</string>
    <string name="charge_agreement"> Activity agreement</string>
    <string name="bind_battery">Binding battery</string>
    <string name="bind_battery_fail">Failed to bind battery.</string>
    <string name="bind_battery_sucess">Binding battery successful</string>
    <string name="wallet_not_enough">The balance is not enough.</string>
    <string name="not_fetch_battery">Unreceived</string>
    <string name="have_fetch_battery">Received</string>
    <string name="cont_get_car_location">Temporarily unable to locate the scooter location.</string>
    <string name="wx_service_number">WeChat service number</string>
    <string name="official_site">Official website</string>
    <string name="phone_number">Contact number</string>
    <string name="email_address">Email address</string>
    <string name="add_car">Add scooter</string>
    <string name="import_serial_number">Manual input</string>
    <string name="serial_number">SN</string>
    <string name="have_binded_car">You have bound the scooter</string>
    <string name="scan_address_error_try">Invalid QR code</string>
    <string name="car_not_exist">The vehicle does not exist.</string>
    <string name="scan_msg">Aligning the scene frame with QRCode</string>
    <string name="flashlight">Flashlight</string>
    <string name="car_map">Scooter location</string>
    <string name="bind_car_sucess">Scooter has been successfully bundled.</string>
    <string name="car_setting">Scooter settings</string>
    <string name="car_nickname">Scooter nickname</string>
    <string name="delivery_time">Manufacture Date</string>
    <string name="hw_version">Hardware version</string>
    <string name="fw_version">Firmware version</string>
    <string name="fw_update">FW update</string>
    <string name="unbind_car">Unpair Scooter</string>
    <string name="unbind_sucess">Unpair successful.</string>
    <string name="current_fw_version_is_latest">Your scooter is up to date.</string>
    <string name="checking_upgrade">Checking for updates…</string>
    <string name="unbind_car_dialog_msg">Are you sure to unbind your scooter?</string>
    <string name="file_download_fail">File download failed</string>
    <string name="open_blue_to_connect">Please check your bluetooth if it is connected</string>
    <string name="update_scess_msg">The update file is written successfully, the firmware is upgrading, please wait a moment. If two minutes later, the scooter does not start properly, please plug the battery, restart the scooter.</string>
    <string name="battery">Battery details</string>
    <string name="download">Download</string>
    <string name="temperature">Temperature</string>
    <string name="capacity">Capacity</string>
    <string name="speed">Speed</string>
    <string name="share">Share</string>
    <string name="inflation_number">Recharge Cycles</string>
    <string name="rated_current">Rated current</string>
    <string name="nominal_voltage">Rated voltage</string>
    <string name="two_battery_limt">Each user only allows to rent 2 batteries</string>
    <string name="all_battery">All battery</string>
    <string name="superbattery">Supper battery</string>
    <string name="rent_time">Rental time</string>
    <string name="detail_thing">Details</string>
    <string name="drawer_trip">Driving record</string>
    <string name="one_battery_unit">One battery </string>
    <string name="battery_deposit">Battery deposit</string>
    <string name="refund_anytime">Refund quickly anytime, anywhere</string>
    <string name="exchange_battery">Replace battery</string>
    <string name="sure">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="please_import_serial_num">Please enter the serial number</string>
    <string name="pay_a_deposit">Pay the deposit</string>
    <string name="scan_manual_input_msg">You can see the serial number at the bottom of the battery</string>
    <string name="order_type">Reservation type</string>
</resources>