<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/refund_tittle"
        layout="@layout/common_actionbar_layout" />

    <LinearLayout
        android:id="@+id/rent_nummsg_llyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/refund_tittle"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rent_pay_tittle_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/battery_deposit"
            android:textColor="#BBBBBB"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/rent_pay_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="¥ 888.00"
            android:textColor="#2C3239"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/rent_pay_explain_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/refund_anytime"
            android:textColor="#333333"
            android:textSize="12sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
    <TextView
        android:text="@string/select_pay_way"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="12sp"
      />
        <LinearLayout
            android:id="@+id/wxpay_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/wx_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/wx"
                android:textColor="@color/black" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/wx_flag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#888888" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/zfbpay_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/zfb_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/zfb"
                android:textColor="@color/black" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/zfb_flag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#888888" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/text_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rent_battery_msg" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:background="#E6442B"
            android:text="@string/pay_now"
            android:textColor="@color/white" />

        <View
            android:layout_width="1dp"
            android:layout_height="10dp" />
    </LinearLayout>


    <TextView
        android:id="@+id/no_data_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/cont_get_data"
        android:visibility="gone" />

    <include layout="@layout/include_no_net_layout" />

</RelativeLayout>