<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg_color">
    <include layout="@layout/common_toolbar_layout" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        android:background="@color/white"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battery_number"
            android:textColor="#3c4350"
            android:textSize="18sp"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/num_select">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_battery_ke"
                android:textColor="#909499"
                android:textSize="14sp"
                android:id="@+id/radio_select_1"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_battery_ke"
                android:textColor="#909499"
                android:textSize="14sp"
                android:id="@+id/radio_select_2"
                android:layout_marginLeft="5dp"
                />
        </RadioGroup>

    </LinearLayout>
    <ImageView android:layout_width="match_parent" android:layout_height="1dp" android:background="#dedede"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash_pledge"
            android:textColor="#3c4350"
            android:textSize="18sp"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥150元"
            android:id="@+id/cost"
            android:textSize="18sp"
            android:textColor="#f56b2b"/>
    </LinearLayout>
    <ImageView android:layout_width="match_parent" android:layout_height="1dp" android:background="#dedede"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:id="@+id/wxpay_panel"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:padding="15dp">
        <ImageView android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@mipmap/wx_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#3c4350"
            android:textSize="18sp"
            android:text="@string/wx"
            android:layout_marginLeft="15dp"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="#ff8800"
            android:id="@+id/wx_flag"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/zfbpay_panel"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:padding="15dp">
        <ImageView android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@mipmap/zfb_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zfb"
            android:textColor="#3c4350"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="#888888"
            android:id="@+id/zfb_flag"/>
    </LinearLayout>
    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#919499"
        android:textSize="12sp"
        android:text="@string/immotor_charge_mes"/>
    <Button
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_centerInParent="true"
        android:text="@string/pay_a_deposit"
        android:background="#000000"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:id="@+id/btn_pay"/>
</LinearLayout>