<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/battery_num_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minHeight="120dp"
    android:minWidth="200dp"
    android:gravity="center"
    android:padding="10dp"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="40dp">
        <TextView
            android:id="@+id/dialog_num_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/select_combo_tv_bg"
            android:textSize="12sp"
            android:padding="10dp"
            android:text="@string/cancel"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dialog_tittle_color"
                android:textSize="16sp"
                android:gravity="center"
                android:translationX="-12dp"
                android:text="@string/battery_number"/>
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.33dp"
        android:background="@color/gray_light"/>
    <TextView
        android:id="@+id/dialog_one_battery"
        android:clickable="true"
        android:text="@string/one_battery"
        android:gravity="center"
        android:textColor="@color/select_combo_tv_bg"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="12sp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.33dp"
        android:background="@color/gray_light"/>

    <TextView
        android:textColor="@color/select_combo_tv_bg"
        android:id="@+id/dialog_two_battery"
        android:clickable="true"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="40dp"
        android:text="@string/two_battery"
        android:textSize="12sp"

        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.33dp"
        android:background="@color/gray_light"/>

</LinearLayout>